<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<item android:id="@+id/favorite"
    android:title="Favorite"
    android:icon="@drawable/ic_baseline_favorite"
    app:showAsAction="always">
</item>
</menu>